[package]
name = "concurrent_chat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.54.1" , features = ["full"]} # Enable the necessary transport features
async-std = "1.10"  # Runtime for async tasks
